Added key for my laptop.

--- a/optionsPage.html
+++ b/optionsPage.html
@@ -99,23 +99,26 @@
 </body>
 
 
-<script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/sites.js"></script>
+<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/sites.js"></script>
 <script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/sites.js"></script>
 <script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/sites.js"></script>
 <script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/sites.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/sites.js"></script>
+<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/sites.js"></script-->
+<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/sites.js"></script>
 
-<script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/options.js"></script>
+<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/options.js"></script>
 <script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/options.js"></script>
 <script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/options.js"></script>
 <script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/options.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/options.js"></script>
+<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/options.js"></script-->
+<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/options.js"></script>
 
-<script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/optionsPage.js"></script>
+<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/optionsPage.js"></script>
 <script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/optionsPage.js"></script>
 <script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/optionsPage.js"></script>
 <script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/optionsPage.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/optionsPage.js"></script>
+<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/optionsPage.js"></script-->
+<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/optionsPage.js"></script>
 
 </html>
 
