--- a/popup.html
+++ b/popup.html
@@ -84,11 +84,12 @@
 	}
 </style>
 <!--style type="text/css" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/popup.css"></style-->
-<script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/jquery-2.0.3.js"></script>
+<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/jquery-2.0.3.js"></script>
 <script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/jquery-2.0.3.js"></script>
 <script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/jquery-2.0.3.js"></script>
 <script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/jquery-2.0.3.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/jquery-2.0.3.js"></script>
+<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/jquery-2.0.3.js"></script-->
+<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/jquery-2.0.3.js"></script>
 
 <title></title>
 <body>
@@ -102,11 +103,12 @@
 		<h2 id="bubbledictionarytitle" class="bubbledictionarytitle" title="click to change" style="display:none"></h3>
 		<input id="bubbledictionarywordinput"/>
 	</div>
-	<img src="chrome-extension://lccdponaancidbampihiebenhcmaioge/load.gif" style="display:none;" id="bubbledictionaryloadanimation" />
+	<!--img src="chrome-extension://lccdponaancidbampihiebenhcmaioge/load.gif" style="display:none;" id="bubbledictionaryloadanimation" />
 	<img src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/load.gif" style="display:none;" id="bubbledictionaryloadanimation" />
 	<img src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/load.gif" style="display:none;" id="bubbledictionaryloadanimation" />
 	<img src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/load.gif" style="display:none;" id="bubbledictionaryloadanimation" />
-	<img src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/load.gif" style="display:none;" id="bubbledictionaryloadanimation" />
+	<img src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/load.gif" style="display:none;" id="bubbledictionaryloadanimation" /-->
+	<img src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/load.gif" style="display:none;" id="bubbledictionaryloadanimation" />
 	<div class="bubbledictionaryentry template" style="display:none;">
 		<a class="bubbledictionaryentrylink" target="_blank"><span class="bubbledictionaryentrylink"></span>&nbsp;&nbsp;<img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAALCAYAAABLcGxfAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAFVJREFUeNpi/P//PwMMpM08geBgBwJMDCQCFnSBWekWjNgUAm3/ANZAhDNQAMhJH0Fuw2UyNg0MpNpAmacJ+YkFXwhBQ0YeKP6RYid9AJpGlAaAAAMAx2IanJ0wsjgAAAAASUVORK5CYII=" /></a>
 		<br />
@@ -122,24 +124,27 @@
 <!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/initialsites.js"></script>
 <script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/initialsites.js"></script>
 <script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/initialsites.js"></script-->
-<script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/sites.js"></script>
+<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/sites.js"></script>
 <script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/sites.js"></script>
 <script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/sites.js"></script>
 <script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/sites.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/sites.js"></script>
+<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/sites.js"></script-->
+<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/sites.js"></script>
 
-<script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/options.js"></script>
+<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/options.js"></script>
 <script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/options.js"></script>
 <script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/options.js"></script>
 <script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/options.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/options.js"></script>
+<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/options.js"></script-->
+<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/options.js"></script>
 
 
-<script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/popup2.js"></script>
+<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/popup2.js"></script>
 <script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/popup2.js"></script>
 <script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/popup2.js"></script>
 <script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/popup2.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/popup2.js"></script>
+<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/popup2.js"></script-->
+<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/popup2.js"></script>
 
 </html>
 
