changed src attributes from absolute to relative paths.

--- a/optionsPage.html
+++ b/optionsPage.html
@@ -60,13 +60,7 @@
 </style>
 
 
-
-<!--style type="text/css" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/popup.css"></style-->
-<script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/jquery-2.0.3.js"></script>
-<script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/jquery-2.0.3.js"></script>
-<script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/jquery-2.0.3.js"></script>
-<script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/jquery-2.0.3.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/jquery-2.0.3.js"></script>
+<script type="text/javascript" src="jquery-2.0.3.js"></script>
 
 <title></title>
 <body>
@@ -99,26 +93,11 @@
 </body>
 
 
-<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/sites.js"></script>
-<script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/sites.js"></script>
-<script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/sites.js"></script>
-<script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/sites.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/sites.js"></script-->
-<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/sites.js"></script>
+<script type="text/javascript" src="sites.js"></script>
 
-<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/options.js"></script>
-<script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/options.js"></script>
-<script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/options.js"></script>
-<script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/options.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/options.js"></script-->
-<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/options.js"></script>
+<script type="text/javascript" src="options.js"></script>
 
-<!--script type="text/javascript" src="chrome-extension://lccdponaancidbampihiebenhcmaioge/optionsPage.js"></script>
-<script type="text/javascript" src="chrome-extension://giajlhmeeiimnmjoenghmkiecbimfeep/optionsPage.js"></script>
-<script type="text/javascript" src="chrome-extension://gibjjfendmmhcfejbfpfcmjclgmiiell/optionsPage.js"></script>
-<script type="text/javascript" src="chrome-extension://kgohdpbkcomhncflijkcokkpnleldaja/optionsPage.js"></script>
-<script type="text/javascript" src="chrome-extension://bicbfljahadcaiafcpbgnhiefafgnlpb/optionsPage.js"></script-->
-<script type="text/javascript" src="chrome-extension://fbkdilefcejenpfkeehhinfpbojlljcd/optionsPage.js"></script>
+<script type="text/javascript" src="optionsPage.js"></script>
 
 </html>
 
