Attempt to be able to tab into title input.

--- a/popup.html
+++ b/popup.html
@@ -95,7 +95,7 @@
 <div id="bubbledictionary">
 	<div id="bubbledictionarytitlecontainer">
 		<h2 id="bubbledictionarytitle" class="bubbledictionarytitle" title="click to change" style="display:none"></h3>
-		<input id="bubbledictionarywordinput"/>
+		<input id="bubbledictionarywordinput" tabindex=1 />
 	</div>
 	<img src="load.gif" style="display:none;" id="bubbledictionaryloadanimation" />
 	<div class="bubbledictionaryentry template" style="display:none;">
