--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <style type="text/css">
+    html
+    {
+		height:100%;
+    }
 	body
 	{
 		background-color:rgba(255,255,255,0.8);
 		margin:0px!important;
-		min-height:250px;
+		height:100%;
 	}
 	#bubbledictionary
 	{
